--- a/ansible/values.yaml.j2
+++ b/ansible/values.yaml.j2
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-clusterName: {{ cluster.name }}
+clusterName: {{ network.name }}
 # consensus type: kafka, solo
 consensusType: {{ orderer.type }}
 hostAliases: []
